adjusted max width for all pages and fixed the problems that it caused, edited about page, added image descriptions

--- a/about/index.html
+++ b/about/index.html
@@ -12,13 +12,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img src="hello.svg" alt="">
-    <p>Hi!! My name is <br> Caitlin McGetrick, and <br> The Power 
-        of Privacy is <br> my Graphic Design senior thesis 
-        project at SUNY <br> New Paltz. You can read <br> some more 
-        about it on my <br> portfolio site <a href="#">here</a>, or you <br> can reach 
-        out to me at <br> caitlin.mcgetrick@gmail.com. Thanks for 
-        stopping by!!</p>
-        <a href="../index.html"><h3 style="color: #BF1A2F;">Back to home</h3></a>
+    <img class="hello" src="hello.svg" alt="Hi!! My name is Caitlin McGetrick, and The Power of Privacy is my Graphic Design senior thesis project at SUNY New Paltz. You can read some more about it on my portfolio site (link below), or you can reach out to me at caitlin.mcgetrick @gmail.com. Thanks for stopping by!!">
+    <a href="cmcgetrick.com"><h1 class="portfoliolink">cmcgetrick.com</h1></a>
+    <div class="resources">
+    <h3>Resources</h3>
+    <p>Are you interested in learning more about digital privacy? Here are some great resources I used when doing research for my project</p>
+    <ul>
+        <a href="https://www.carissaveliz.com/books"><li><u>Privacy is Power</u> by Carissa Veliz</li></a>
+        <a href="https://www.carissaveliz.com/books"><li><u>The New York Times Privacy Project</u></li></a>
+        <a href="https://privacyinternational.org"><li><u>Privacy International</u></li></a>
+        <a href="https://ssd.eff.org/module-categories/basics"><li><u>Surveillance Self-Defense</u> by the EFF</li></a>
+        <a href="https://global.oup.com/academic/product/why-privacy-matters-9780190939045?cc=us&lang=en&#:~:text=Privacy%20matters%20because%20good%20privacy,we%20will%20need%20privacy%20rules."><li><u>Why Privacy Matters</u> by Neil Richards</li></a>
+    </ul>
+</div>
+    <a href="../index.html"><img src="backtohome.svg" alt="Back to home" style="width: 50%; display: flex; margin: 0 auto; padding-bottom: 40px; padding-top: 40px;"></a>
 </body>
 </html>
