--- a/article1/index.html
+++ b/article1/index.html
@@ -15,13 +15,13 @@
 </head>
 <body>
     <div class="articletitle">
-        <img src="img/firsteyes.svg" alt="" style="padding-top: 100px">
+        <img src="img/firsteyes.svg" alt="eyes looking at each other and black dotted border" style="padding-top: 100px">
         <h1 id="centertitle">How do <br> cellphone <br>apps collect <br>information <br>from me?</h1>
     </div>
 
     <div class="bluepart">
         <p class="topofsection">Nearly every app on your phone collects information about you.</p>
-        <img src="img/apps.svg" alt="">
+        <img src="img/apps.svg" alt="colorful squares resembling app icons">
         <p class="listopener">This can include:</p>
         <ul class="list">
             <li>your location</li>
@@ -37,7 +37,7 @@
     <div class="pinkpart">
         <p class="topofsection">All this information is kept and stored in a profile that online 
         advertisers or web services make about you. </p>
-        <img src="img/detectiveboard.svg" alt="">
+        <img src="img/detectiveboard.svg" alt="evidence board with the word 'you' in the middle, and string conecting postits, papers, and fingerprints">
         <p class="bottomofsection">They connect and compare information with each other to create a 
         more comprehensive profile based on your activities all over the web.</p>
     </div>
@@ -45,17 +45,17 @@
     <div class="yellowpart">
         <p class="topofsection">Say you download a shopping app on your phone and create an 
         account on it with your email.</p>
-        <img src="img/emailbar.svg" alt="" class="slide-in-fromleft">
+        <img src="img/emailbar.svg" alt="example blamk form to enter email" class="slide-in-fromleft">
         <p class="bottomofsection">There are specific tracking domains connected to that app 
         that collect information about what you're doing on it. </p>
-        <img src="img/eye1.svg" alt="" style="padding-bottom: 20px;">
+        <img src="img/eye1.svg" alt="cartoon eyeball looking at shopping app icon" style="padding-bottom: 20px;">
     </div>
 
     <div class="greenpart">
         <p class="topofsection">This can include behavioral information, such as what types 
             of clothing you're looking at most, what times of day you're 
             doing the most shopping, or how likely you are to buy certain items.</p>
-        <img src="img/eyedata.svg" alt="">
+        <img src="img/eyedata.svg" alt="cartoon eye looking at data and graphs">
         <p class="bottomofsection">These trackers can also collect more sensitive types of data from you, 
         such as your location, financial information, gender, and email address.</p>
     </div>
@@ -64,7 +64,7 @@
         <p class="topofsection">Now say you go onto Pinterest. The same tracking domains may be 
             connected to Pinterest as well, and can identify you through 
             your IP address, device information, and email address.</p>
-        <img src="img/eye2.svg" alt="">
+        <img src="img/eye2.svg" alt="cartoon eye looking at shopping app icon and Pinterest app icon">
         <p class="bottomofsection">They can use the information that they learned about you from 
             the shopping app to show you more specific ads on Pinterest; 
             maybe for stores that they know are near your location and 
@@ -72,7 +72,7 @@
     </div>
     
     <div class="pinkpart">
-        <img src="img/pins.svg" alt="" style="width: 100%; padding-top: 40px;" class="fade-in">
+        <img src="img/pins.svg" alt="blank boxes resembling pinterest pins" style="width: 100%; padding-top: 40px;" class="fade-in">
         <p class="bottomofsection">They also can collect more information about you based on your 
             Pinterest activities and what you choose to click on and look at.</p>
     </div>
@@ -82,7 +82,7 @@
             YouTube app. They can learn even more information about you based 
             on the types of videos you choose to watch and the channels you 
             interact with.</p>
-        <img src="img/eye3.svg" alt="" style="padding-bottom: 40px;">
+        <img src="img/eye3.svg" alt="cartoon eye looking at shopping app icon, pinterest app icon, and youtube app icon" style="padding-bottom: 40px;">
     </div>
 
     <div class="redpart">
@@ -90,13 +90,13 @@
             probably happening to you in some form. Google, Meta, and Apple 
             (and other companies!) all have massive tracking networks that 
             gather information about you all over the web.</p>
-        <img src="img/eyes.svg" alt="">
+        <img src="img/eyes.svg" alt="web of cartoon eyes looking at each other connected by black dashed lines">
         <p class="bottomofsection">By analyzing and cross-referencing this data, app tackers can build 
             a detailed profile of your interests, habits, and behavior.</p>
     </div>
 
     <div class="bluepart">
-        <img src="img/profile.svg" alt="">
+        <img src="img/profile.svg" alt="profile icon silhouette">
         <p class="bottomofsection">This profile can then be used for a variety of purposes, such as 
             serving you targeted advertisements or selling your data to third 
             party partners.</p> 
