--- a/article2/index.html
+++ b/article2/index.html
@@ -15,20 +15,20 @@
 <body>
 
 <div class="cover">
-    <img src="img/cover.png" alt="" style="width: 100%; margin-bottom: -20px;">
+    <img src="img/cover.png" alt="Why is privacy so important? and why is it such a big deal that this data is being collected from me?" style="width: 100%; margin-bottom: -20px;">
 </div>
 
 <div class="redpart">
     <p id="textabovecatcomic1">you may be thinking...</p>
-    <img src="img/catcomic1.svg" alt="" style="display:flex; margin: 0 auto;">
+    <img src="img/catcomic1.svg" alt="cartoon cat with thought bubble that reads 'i have nothing to hide, so I don't care what kind of data is being collected from me!' " style="display:flex; margin: 0 auto;">
     <p id="textbelowcatcomic1">but this isn't true!</p>
-    <img src="img/everyone.svg" alt="" style="display:block; margin-left: auto; margin-right: 70px; margin-bottom: -20px;">
+    <img src="img/everyone.svg" alt="the word 'everyone' written with cut out ransom letters" style="display:block; margin-left: auto; margin-right: 70px; margin-bottom: -20px;">
     <p id="textbeloweveryoneransom">has something they <br>don't want others to <br> know about them</p>
 </div>
 
 <div class="bluepart">
     <p id="textabovecatcomic2">you might also be thinking...</p>
-    <img src="img/catcomic2.svg" alt="" style="display:flex; margin: 0 auto;">
+    <img src="img/catcomic2.svg" alt="cartoon cat with thought bubble that reads 'these companies already know everything about me, privacy is dead anyway there's no point in trying to stop it from happening...' " style="display:flex; margin: 0 auto;">
     <p id="textbelowcatcomic2">but this isn't true either!</p>
 </div>
 
@@ -37,15 +37,15 @@
 </div>
 
 <div class="whitepart">
-    <img src="img/magnifyingglass.svg" alt="">
+    <img src="img/magnifyingglass.svg" alt="magnifying glass with the quote 'Privacy is best thought of not as some measurable and vanishing thing, but as an ongoing conversation about social power - specifically about the social power conferred by human information.' written inside it">
 </div>
 
 <div class="redpart">
-    <img src="img/privacypower.png" alt="" style="width: 100%;">
+    <img src="img/privacypower.png" alt="privacy is fundamentally about power" style="width: 100%;">
 </div>
 
 <div class="pinkpart">
-    <img src="img/folder.svg" alt="" style="padding-top: 40px; margin-bottom: -30px;">
+    <img src="img/folder.svg" alt="file folder that has a piece of paper in it that says 'the more privacy we have, the more control we have over what others know about us' " style="padding-top: 40px; margin-bottom: -30px;">
     <p id="textbelowfolder">We don't know <br>how our information <br>may be used against us in <br>the future, 
         so by protecting <br>more of our privacy now, <br>the more power we are <br>giving 
         to our future (and <br>present!) selves.</p>
@@ -54,42 +54,43 @@
 <div class="bluepart">
     <!-- <p id="textonlocks">One of the most obvious <br>reasons as to why privacy <br>is so important is that 
         it <br>prevents unauthorized <br>and unwanted access to <br>our personal information. </p> -->
-    <img src="img/locks.svg" alt="" style="width: 100%; margin-top: -30px;">
+    <img src="img/locks.svg" alt="One of the most obvious reasons as to why privacy is so important is that it prevents unauthorized and unwanted access to our personal information." style="width: 100%; margin-top: -30px;">
     <!-- <p id="textnexttocatpokingheadfromside">The internet stores vast quantities of information, all of which can be exposed 
         through data breaches or other unscrupulous means at any time. </p>-->
-    <img src="img/catpokingheadfromside.svg" alt="" style="width: 90%; padding: 40px 0px;">
+    <img src="img/catpokingheadfromside.svg" alt="black cat poking its head in from the side of the screen next to text that reads 'the internet stores vast quantities of infotmation, all of which can be exposed through data breaches or other unscrupulous means at any time.'" style="width: 90%; padding: 40px 0px;">
 </div>
 
-<div class="redpart" style="position: relative; height: 470px">
+<div class="redpart">
     <!-- <p id="colorblocktext">The less information that is collected and stored about us, the less of a risk 
         we are at for this happening.</p> -->
-    <img src="img/colorblocks.svg" alt="" style="width: 100%; bottom:0; position: absolute;">
+    <img src="img/colorblocks.svg" alt="the less information that is collected and stored about us, the less of a risk we are at for this happening" style="width: 100%; bottom:0;">
 </div>
 
 <div class="pinkpart">
     <!-- <p id="textnexttocolumncat">Another equally important, and possibly less obvious, reason as to why privacy is so important 
         is because it protects our democratic institutions and other fundamental human rights.</p> -->
-   <center><img src="img/columncat.svg" alt="" style="width: 67%; padding: 40px 0px;"></center>
+   <center><img src="img/columncat.svg" alt="illustration of a black cat sitting on top of a roman style column, next to a paragraph that reads 'another equally important, and possibly less obvious, reason as to why privacy is so important is because it protects our democratic institutions and other fundamental human rights. " style="width: 67%; padding: 40px 0px;"></center>
 </div>
 
 <div class="greenpart">
     <!-- <p id="textonbluedots">Corporations, governments, and other organizations can use the vast amounts of information 
         available to analyze overall trends in the public sphere. </p> -->
-    <img src="img/bluedots.svg" alt="" style="width: 100%;">
+    <img src="img/bluedots.svg" alt="Corporations, governments, and other organizations can use the vast amounts of information available to analyze overall trends in the public sphere." style="width: 100%;">
     <p id="textbelowbluedots">This information can then help them use targeted advertising to manipulate public 
         opinion or even influence elections.</p>
 </div>
 
 <div class="yellowpart">
-    <p id="textaboveprotestcat">Digital privacy also ensures our first amendment rights </p>
-    <img src="img/protestcat.svg" alt="" style="padding-bottom: 40px;">
+    <!-- <p id="textaboveprotestcat">Digital privacy also ensures our first amendment rights </p> -->
+    <img src="img/pixel-speech-bubble.png" alt="pixel speech bubble that reads 'digital privacy also ensures our first amendment rights' " style="padding-bottom: 40px; padding-top: 40px; width: 75%; display: flex; margin: 0 auto;">
+    <img src="img/protestcat.svg" alt="illustration of black cat holding up a sign that says 'it is vital for a functioning democracy that citizens feel they can express their ideas without fear of retaliation' " style="padding-bottom: 40px;">
 </div>
 
 <div class="pinkpart" style="position: relative; height: 730px;">
    <p id="textabovehands"> Decreasing the amount of information that governments have about their citizens' personal 
     lives mitigates the risk that they will use that information to suppress dissenting voices 
     or try to prevent them from exercising their other democratic rights.</p>
-    <img src="img/hands.svg" alt="" style="width: 100%; bottom: 0; position: absolute;">
+    <img src="img/hands.svg" alt="illustration of multiple overlapping muticoored hands rising up form the bottom of the screen" style="width: 100%; bottom: 0; position: absolute;">
 </div>
 
 <div class="redpart">
