--- a/article3/index.html
+++ b/article3/index.html
@@ -19,19 +19,19 @@
 
  <div class="articletitle">
     <div class="centertitle">
-        <img class="img" src="img/opening.svg" alt="">
+        <img class="img" src="img/opening.svg" alt="photo of padlock with the words 'how can i protect my digital privacy?'">
         <h1>How can I<br>protect<br>my digital<br>privacy?</h1>
     </div>
  </div>   
 
 <div class="yellowpart">
-    <img class="img" src="img/scribble.svg" alt="">
+    <img class="img" src="img/scribble.svg" alt="black pen scribble">
     <p id="bottomofsection">This is a complicated issue that doesn't have a perfect solution.</p>
 </div>
 
 <div class="redpart">
     <p id="topofsection">One of the most important things you can do is keep yourself informed.</p>
-    <img class="img" src="img/bookstack.svg" alt="">
+    <img class="img" src="img/bookstack.svg" alt="illustration of stack of books">
 </div>
 
 <div class="pinkpart">
@@ -39,7 +39,7 @@
         is because this information is being collected from us 
         without our knowledge or consent.
     </p>
-    <img class="img" src="img/sleepingcat.svg" alt="">
+    <img class="img" src="img/sleepingcat.svg" alt="illustration of sleeping black cat with multiple colored eyes above looking down at it">
     <p id="bottomofsection">Online data collection can be a difficult thing to conceptualize 
         because we can't actually see it happening. It makes it hard to be 
         aware of or even care about.
@@ -47,19 +47,19 @@
 </div>
 
 <div class="bluepart">
-    <img class="img" src="img/lamp.svg" alt="">
+    <img class="img" src="img/lamp.svg" alt="lamp illuminating the words 'but having a general idea of which apps collect which information from you is a lot better than being completely in the dark">
 </div>
 
 <div class="greenpart">
     <p id="topofsection">In the iOS App Store, every app has a privacy report that lets 
         you know what information it takes from you.
     </p>
-    <img class="img" src="img/screenshot.png" alt="" style="max-width: 300px;">
+    <img class="img" src="img/screenshot.png" alt="screenshot of the pinterest privacy report on the apple app store" style="max-width: 300px;">
     <p id="bottomofsection">While it is by no means perfect, it is a good start to being more transparent about data collection.</p>
 </div>
 
 <div class="pinkpart">
-    <img class="img" src="img/eyelashes.svg" alt="" style="padding-top: 40px;">
+    <img class="img" src="img/eyelashes.svg" alt="line drawing of closed eyes with eyelashes" style="padding-top: 40px;">
     <p id="bottomofsection" style="text-align: center;">Here are a few other things you can do to protect your privacy:</p>
 </div>
 
@@ -68,7 +68,7 @@
         <img class="img" src="img/1.svg" alt="1">
         <p id="ruletext">Download a <br>firewall app that <br>blocks trackers.</p>
     </div>
-    <img class="img" src="img/firewall.svg" alt="">
+    <img class="img" src="img/firewall.svg" alt="illustration of a flame and brick wall covering an eye">
     <p id="bottomofsection">This helps protect you from apps that are trying to collect data from you.</p>
 </div>
 
@@ -77,8 +77,8 @@
         <img class="img" src="img/2.svg" alt="2">
         <p id="ruletext">Look through the <br>privacy settings <br>on your phone</p>
     </div>
-    <img class="img" src="img/magnifyingglass1.svg" alt="" style="width: 100%;">
-    <img class="img" src="img/magnifyingglass2.svg" alt="" style="margin-top: -150px; margin-bottom: -60px; width: 100%;">
+    <img class="img" src="img/magnifyingglass1.svg" alt="magnifying glass with the words 'it should be assumed that the default settings on your device are probably privacy-unfriendly'" style="width: 100%;">
+    <img class="img" src="img/magnifyingglass2.svg" alt="magnifying glass with the words 'take the time to adjust them to a level you prefer' inside" style="margin-top: -150px; margin-bottom: -60px; width: 100%;">
 </div>
 
 <div class="pinkpart">
@@ -86,7 +86,7 @@
         <img class="img" src="img/3.svg" alt="3">
         <p id="ruletext" style="margin-right: 50px;">Clear your <br>phone of old <br>unused apps.</p>
     </div>
-    <img class="img" src="img/trash.svg" alt="">
+    <img class="img" src="img/trash.svg" alt="illustration of three trash bags with trash scattered around them, incluing app icons">
     <p id="bottomofsection">All apps collect information about us, and deleting apps you 
         don't use stops it from happening needlessly.
     </p>
@@ -97,12 +97,12 @@
         <img class="img" src="img/4.svg" alt="4">
         <p id="ruletext">Be wary of who <br>you give out <br>your email to.</p>
     </div>
-    <img class="img" src="img/emaileye.svg" alt="">
+    <img class="img" src="img/emaileye.svg" alt="illustration of eyeball looking at the word 'you@email.com'">
     <p id="bottomofsection">Consider making a secondary account that you can use to log into apps</p>
 </div>
 
 <div class="bluepart" style="height: 500px;">
-    <img class="img" src="img/catbox.svg" alt="" style="position: relative; padding-top: 60px;">
+    <img class="img" src="img/catbox.svg" alt="illustration of black cat peeking upward" style="position: relative; padding-top: 60px;">
     <p id="catbox">Almost all the <br>responsibility <br>to protect our <br>digital privacy <br> 
         falls on us, the <br>consumers.
     </p>
@@ -112,25 +112,25 @@
     <p id="topofsection">Tech companies don't want to be transparent about their privacy practices, 
         and a lot of money is made in the business of buying and selling user data.
     </p>
-    <img class="img" src="img/catexchange.svg" alt="" style="width: 100%;">
+    <img class="img" src="img/catexchange.svg" alt="two cat paws exchanging a piece of paper with fingerprints on it, binary code in the background" style="width: 100%;">
     <p id="bottomofsection">They have the ability to enact more privacy regulations, but not much incentive.</p>
 </div>
 
 <div class="bluepart">
     <p id="topofsection">This is why our actions</p>
-    <img class="img" src="img/matter.svg" alt="" style="margin-top: -40px;">
+    <img class="img" src="img/matter.svg" alt="the word 'matter' written with cutout ransom letters" style="margin-top: -40px;">
 </div>
 
-<div class="pinkpart" style="height: 690px;">
-    <img src="img/surveillance.svg" alt="" style="width: 100%; position: relative; ">
-    <p id="cameratext">Taking back control of our privacy is one of the first steps in stopping 
+<div class="pinkpart">
+    <img src="img/surveillance2.svg" alt="multiple eyes and security cameras looking at the words 'taking back control of our privacy is one of the first steps in stopping the growth of the surveillance state we live in'" style="width: 100%;">
+    <!-- <p id="cameratext">Taking back control of our privacy is one of the first steps in stopping 
         the growth of the surveillance state we live in.
-    </p>
+    </p> -->
 </div>
 
 <div class="redpart">
     <p id="topofsection">Our privacy is valuable, and it's never too late to start treating it that way.</p>
-    <a href="../index.html"><img class="img" src="img/gem.svg" alt=""></a>
+    <a href="../index.html"><img class="img" src="img/gem.svg" alt="illustration of gem with the words 'click me to go home!' and an arrow pointing at it"></a>
 </div>
 
 </body>
