--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 <body>
     <div class="container">
-    <img id="image" src="home.svg" alt="">
-    <p>What does the phrase “digital privacy” mean to you? It's not 
+    <img id="image" src="home2.svg" alt="The Power of Privacy: an Introduction to mobile data collection. What does the phrase “digital privacy” mean to you? It’s not only about how much information we choose to share about ourselves through social media. It also refers to the information that is being taken from us unknowingly as we use the internet and go on our cellphones.">
+    <!-- <p>What does the phrase “digital privacy” mean to you? It's not 
         only about how much information we choose to share about ourselves 
         through social media. It also refers to the information that is being 
-        taken from us unknowingly as we use the internet and go on our cellphones.</p>
-    <a href="article1/index.html"><img src="postit1.svg" alt=""></a>
-    <a href="article2/index.html"><img src="postit2.svg" alt=""></a>
-    <a href="article3/index.html"><img src="postit3.svg" alt=""></a>
+        taken from us unknowingly as we use the internet and go on our cellphones.</p> -->
+    <a href="article1/index.html"><img src="postit1.svg" alt="How do cellphone apps collect information from me?"></a>
+    <a href="article2/index.html"><img src="postit2.svg" alt="Why does it matter that this data is being taken from me?"></a>
+    <a href="article3/index.html"><img src="postit3.svg" alt="what can i do to prevent it from happening?"></a>
     <a href="about/index.html"><h3>About</h3></a>
 </div>
 </body>
